argocd-services/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: argocd-service
  namespace: argocd
spec:
  type: NodePort
  selector:
    app: argocd-server
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 443
